# launchd-tag

./: README.md  package.json  setup.cfg  setup.py
scripts/: launchd-tag
tests/launchd-tag/examples/: launchd-tag.sh
