# https://pypi.org/project/setupcfg-generator/
[metadata]
name = launchd-tag
version = 2019.4.20
url = https://github.com/looking-for-a-job/launchd-tag
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = launchd

[options]
install_requires = 
	setuptools
scripts = 
	scripts/launchd-tag
